# core-subscription

./: Cargo.toml
.github/workflows/: codeql.yml  release.yml
infra/role/: samconfig.toml  template.yml
infra/step/: samconfig.toml  template.yml
src/: handler.rs  main.rs
src/handler/: account.rs  properties.rs  query_output.rs
src/handler/account/: access_token.rs  account_result.rs
src/handler/properties/: secret_manager.rs  secrets.rs
src/handler/query_output/: execution.rs  query_execution.rs
src/handler/query_output/query_execution/: engine_version.rs  query_execution_context.rs  query_execution_statistics.rs  query_execution_status.rs  result_configuration.rs  result_reuse_configuration.rs  statement_type.rs
src/handler/query_output/query_execution/query_execution_statistics/: result_reuse_information.rs
src/handler/query_output/query_execution/query_execution_status/: athena_error.rs  query_execution_state.rs
src/handler/query_output/query_execution/result_configuration/: acl_configuration.rs  encryption_configuration.rs
src/handler/query_output/query_execution/result_configuration/acl_configuration/: s3_acl_option.rs
src/handler/query_output/query_execution/result_configuration/encryption_configuration/: encryption_option.rs
src/handler/query_output/query_execution/result_reuse_configuration/: result_reuse_by_age_configuration.rs
