[package]
name = "core-subscription"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.8"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt"] }
lambda_runtime = "0.9.1"
aws_lambda_events = "0.13.1"
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
aws-sdk-athena = "1.13.0"
reqwest = { version =  "0.11.23", features = ["json"] }
openssl = { version = "0.10.63", features = ["vendored"] }

[dev-dependencies]
tokio-test = "0.4.3"
tracing-test = "0.2.4"
chrono = "0.4.33"
