[package]
name = "core-subscription"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.8"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt"] }
lambda_runtime = "0.10.0"
aws_lambda_events = "0.15.0"
aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
aws-sdk-athena = "1.6.0"
reqwest = { version =  "0.11.25", features = ["json"] }
openssl = { version = "0.10.64", features = ["vendored"] }

[dev-dependencies]
tokio-test = "0.4.3"
tracing-test = "0.2.4"
chrono = "0.4.35"
